--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,10 @@
-.content {
- width: 400px;
- height: 100px;
- background-color: #00ffff;
-}
-
-.inner {
- padding-top: 30px;
- display: flex;
- justify-content: space-evenly;
+button{
+display:inline-block;
+background:#d13415;
+padding:10px 30px;
+text-align:center;
+color:#FFF;
+margin:5px;
+border:1px solid;
+cursor:pointer;
 }
