--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,10 +3,11 @@ display:inline-block;
 background:#d13415;
 padding:40px 30px;
 text-align:center;
-color:#FFF;
+color:transparent;
 margin:45px;
 border:1px solid;
 cursor:pointer;
-font-size:40px;  
+font-size:40px;
+  
 }
 
