--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ display:inline-block;
 padding:40px 30px;
 background:#d13415;
 text-align:center;
-color:#FFF;
+color:#FF69a3;
 margin:45px;
 border:1px solid;
 cursor:pointer;
