--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,18 @@ color:#FF69a3;
 margin:45px;
 border:1px solid;
 cursor:pointer;
-font-size:22px; 
+font-size:22px;
+box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
+ border-bottom: solid 2px #118e9e;
+ border-radius: 4px;
+ font-weight: bold;
+ text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+
+.btn-square-toy:active {
+ /*押したとき*/
+ border-bottom: solid 2px #00BCD4;
+ box-shadow: none;
+ text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);  
 }
 
