--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
 button{
 display:inline-block;
 padding:40px 30px;
-background:#60eeff;
+background:#00bcd4;
 text-align:center;
-color:#FF69a3;
+color:#00bcd4;
 margin:45px;
 border:1px solid;
 cursor:pointer;
