--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,4 +21,6 @@ box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
  box-shadow: none;
  text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);  
 }
-
+body {
+  background-image:(‘/img/background.jpg’);
+}
