--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,5 +22,5 @@ box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
  text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);  
 }
 body {
-  background-image:(‘/img/background.jpg’);
+  background-image:https://github.com/Creapct/creapct.github.io/blob/main/IMG_3043.jpeg?raw=true(‘/img/background.jpg’);
 }
