--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,4 +21,12 @@ box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
  box-shadow: none;
  text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);  
 }
-
+<style type="text/css">
+body {
+  background-color: #486d46;            /* 背景色 */
+  background-image: url("forest.jpg"); /* 画像 */
+  background-size: cover;               /* 全画面 */
+  background-attachment: fixed;         /* 固定 */
+  background-position: center center;   /* 縦横中央 */
+}
+</style>
