--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
 <style type="text/css">
 body {
   background-color: #486d46;            /* 背景色 */
-  background-image: url(""); /* 画像 */
+  background-image: url("https://github.com/Creapct/creapct.github.io/blob/main/IMG_3043.jpeg?raw=true"); /* 画像 */
   background-size: cover;               /* 全画面 */
   background-attachment: fixed;         /* 固定 */
   background-position: center center;   /* 縦横中央 */
