--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,12 +21,18 @@ box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
  box-shadow: none;
  text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);  
 }
-<style type="text/css">
-body {
-  background-color: #486d46;            /* 背景色 */
-  background-image: url("https://github.com/Creapct/creapct.github.io/blob/main/IMG_3043.jpeg?raw=true"); /* 画像 */
-  background-size: cover;               /* 全画面 */
-  background-attachment: fixed;         /* 固定 */
-  background-position: center center;   /* 縦横中央 */
+body,html{
+ margin: 0;
+ padding: 0;
 }
-</style>
+.img{
+ background-image: url(pets-3715733_640.jpg);
+ background-position: center;
+ background-size: cover;
+ width: 100%;
+ height: 100vh;
+}
+.img::before{
+ content: '';
+ display: block;
+ padding-top: 50%;
