--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ body,html{
  padding: 0;
 }
 .img{
- background-image: url(pets-3715733_640.jpg);
+ background-image: url(https://github.com/Creapct/creapct.github.io/blob/main/IMG_3043.jpeg?raw=true);
  background-position: center;
  background-size: cover;
  width: 100%;
