--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ margin:45px;
 border:1px solid;
 cursor:pointer;
 font-size:24px;
-align="center" 
+justify-content:center
 box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
  border-bottom: solid 2px #118e9e;
  border-radius: 4px;
