--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ display:inline-block;
 padding:40px 30px;
 background:#00bcd4;
 text-align:center;
-color:#00bcd4;
+color:#ffd700;
 margin:45px;
 border:1px solid;
 cursor:pointer;
@@ -37,3 +37,4 @@ body,html{
  content: '';
  display: block;
  padding-top: 50%;
+#00bcd4
