--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ display:inline-block;
 padding:40px 30px;
 background:#00bcd4;
 text-align:center;
-color:#ffd700;
+color:#005fff;
 margin:45px;
 border:1px solid;
 cursor:pointer;
