--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ body,html{
  padding: 0;
 }
 .img{
- background-image: url();
+ background-image: url(https://github.com/Creapct/creapct.github.io/blob/main/IMG_3046.jpg?raw=true);
  background-position: center;
  background-size: cover;
  width: 100%;
