--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 button{
 display:inline-block;
 padding:40px 30px;
-background:#00bcd4;
+background:#;
 text-align:center;
 color:#005fff;
 margin:45px;
